postcss/testData/inspections/customPropertiesSet/emptyCustomPropertiesSetName.pcss
@apply <error descr="Custom properties set name should not be empty">--</error>;